# Homework_1

./: CMakeLists.txt  main.cpp
Quadratic/: CMakeLists.txt  Quadratic.cpp  Quadratic.h
Test/: CMakeLists.txt  test.cpp
